# CraftRelay

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MASTER_PLAN.md  PluginAdapter.md  PluginUsage.md  README.md  SECURITY.md  VERSION_SOURCES.md
.github/workflows/: ci.yml
crates/craftrelay-agent/: Cargo.toml
crates/craftrelay-agent/src/: barrier_capture.rs  lib.rs
crates/craftrelay-agent/tests/: barrier_capture_kafka.rs  delivery_integration.rs
crates/craftrelay-domain/: Cargo.toml
crates/craftrelay-journal/: Cargo.toml
crates/craftrelay-journal-bench/: Cargo.toml
crates/craftrelay-journal-bench/src/: candidate.rs  ingress.rs  lib.rs  main.rs  report.rs
crates/craftrelay-journal/src/: lib.rs
crates/craftrelay-kafka-delivery/: Cargo.toml
crates/craftrelay-kafka-delivery/src/: gate.rs  lib.rs  producer.rs  profile.rs  repair.rs  replicated.rs  retry.rs  routing.rs  service.rs
crates/craftrelay-protocol/: Cargo.toml
crates/craftrelay-testkit/: Cargo.toml
deployment/compose/: compose.yml  prometheus.yml
deployment/tooling/: rust-audit.Dockerfile
docs/: architecture.md  canonicalization.md  failure-matrix.md  integration-manifest.md  kafka-zero-loss-profile.md  lifecycle.md  live-projector.md  operations.md  paper-threading.md  payload-retention.md  plugin-adapter.md  plugin-usage.md  projector-outbox.md  protocol.md  query-consistency.md  testing.md  threat-model.md
docs/adrs/: 0001-system-boundaries.md  0002-threat-model-rpo-zero.md  0003-installation-identities-uuidv7.md  0004-positive-signed-numerics.md  0005-envelope-payload-states.md  0006-fingerprint-envelope-checksum.md  0007-snapshot-revision-integrity.md  0008-publish-lifecycle-tracking.md  0009-rejection-indeterminate.md  0010-node-local-ownership.md  0011-stream-routing.md  0012-atomicity.md  0013-kafka-zero-loss.md  0014-kafka-retention-protection.md  0015-payload-retention.md  0016-projector-sequencing-dedup.md  0017-projection-ack-outbox.md  0018-agent-ack-consumption.md  0019-postgresql-p0-durability.md  0020-strict-query-barriers.md  0021-barrier-vectors-snapshot.md  0022-consistency-tokens.md  0023-bounded-watches.md  0024-query-isolation-capacity.md  (+8 more)
java/: mvnw  mvnw.cmd  pom.xml
scripts/: Start-DevStack.ps1  Stop-DevStack.ps1  Test-AuditBundle.ps1
(+91 files in other folders)
