[workspace]
members = [
  "crates/craftrelay-domain",
  "crates/craftrelay-protocol",
  "crates/craftrelay-agent",
  "crates/craftrelay-testkit",
  "crates/craftrelay-journal-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
rdkafka = { version = "=0.38.0", default-features = false, features = ["cmake-build"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
sha2 = "=0.10.9"
