[package]
name = "craftrelay-journal-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
craftrelay-domain = { path = "../craftrelay-domain" }
rusqlite = { version = "=0.35.0", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
