[package]
name = "craftrelay-kafka-delivery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
craftrelay-domain = { path = "../craftrelay-domain" }
craftrelay-journal = { path = "../craftrelay-journal" }
sha2 = { workspace = true }

[dev-dependencies]
rusqlite = { version = "=0.35.0", features = ["bundled"] }
